Fixed the invisible text in forms

--- a/classifier_app/static/classifier_app/css/style.css
+++ b/classifier_app/static/classifier_app/css/style.css
@@ -51,7 +51,7 @@ head {
 
 .form-control {
   border: 1px solid #532D3B;
-  color: #FFF;
+  color: #000;
   background-color: transparent;
 }
 
